--- a/decoracion.html
+++ b/decoracion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/CSS/decoracion.css"> <!-- Enlace decoracion de html-->
-    <link rel="StyleSheet" type="text/css" href="/lok html/CSS/LOk.css">  <!-- Enlace decoracion de texto html-->
+    <link rel="StyleSheet" type="text/css" href="CSS/decoracion.css"> <!-- Enlace decoracion de html-->
+    <link rel="StyleSheet" type="text/css" href="CSS/LOk.css">  <!-- Enlace decoracion de texto html-->
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script> <!--Pagina para utilizar algunas decoracion-->
     <title> Desarrollo Web</title>
  </head>
