--- a/decoracion.html
+++ b/decoracion.html
@@ -108,7 +108,7 @@
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/13. concensado de notas/not.html" target="_blank">  <!--Opcion del menu-->
+        <a href="13. concensado de notas/not.html" target="_blank">  <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Concensado de notas </h4>
