--- a/decoracion.html
+++ b/decoracion.html
@@ -24,84 +24,84 @@
                 <i class="fa-light fa-bat"></i>  <!-- RELLENO-->
            </div>
         </a>
-        <a href="/lok html/1. Menor-mayor/menor.html" target="_blank">  <!--Opcion del menu-->
+        <a href="1. Menor-mayor/menor.html" target="_blank">  <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Menor-Mayor </h4> 
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/2.Ecuaciones/ecuaciones.html" target="_blank"><!--Opcion del menu-->
+        <a href="2.Ecuaciones/ecuaciones.html" target="_blank"><!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Ecuaciones </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/Calculadora/calculadora.html" target="_blank"> <!--Opcion del menu-->
+        <a href="Calculadora/calculadora.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> CALCULADORA </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/4.Hamburgusa/Hamburguesa.html" target="_blank"> <!--Opcion del menu-->
+        <a href="4.Hamburgusa/Hamburguesa.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Hamburguesa </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/5.menor-intermedio/intermedio.html" target="_blank"><!--Opcion del menu-->
+        <a href="5.menor-intermedio/intermedio.html" target="_blank"><!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Menor/Intermedio/Mayor </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/6. Digitos naturales/digitos.html" target="_blank"><!--Opcion del menu-->
+        <a href="6. Digitos naturales/digitos.html" target="_blank"><!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Digitos naturales </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/7. 4 digitos/digitosde4.html" target="_blank"><!--Opcion del menu-->
+        <a href="7. 4 digitos/digitosde4.html" target="_blank"><!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Mayor/Menor de 4 digitos </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/8. Conversion de Km,Dc,D,Cm/conver.html" target="_blank"> <!--Opcion del menu-->
+        <a href="8. Conversion de Km,Dc,D,Cm/conver.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Conversion de Km,Dc,D,Cm </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/9. Facturar/factu.html" target="_blank"> <!--Opcion del menu-->
+        <a href="9. Facturar/factu.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Facturar un productos </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/10. Notas del estudiante/notas.html" target="_blank"> <!--Opcion del menu-->
+        <a href="10. Notas del estudiante/notas.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Notas del estudiante </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/11. Tablas de multiplicar/tabla.html" target="_blank"> <!--Opcion del menu-->
+        <a href="11. Tablas de multiplicar/tabla.html" target="_blank"> <!--Opcion del menu-->
             <div id="opcion">
                 <i class="fa-light fa-bat"></i>
                 <h4> Tablas de multiplicar </h4>
             </div>
         </a>
     <!--Cambio-->
-        <a href="/lok html/12. Binarios/binario.html" target="_blank">  <!--Opcion del menu-->
+        <a href="12. Binarios/binario.html" target="_blank">  <!--Opcion del menu-->
             <div id="opcion"> 
                 <i class="fa-light fa-bat"></i>
                 <h4> De binarios a Enteros </h4>
@@ -116,7 +116,7 @@
         </a>
     </div>
   </div>
-  <script src="/lok html/Java/java.js"></script>  <!--Java que permite el movimiento del menu -->
+  <script src="Java/java.js"></script>  <!--Java que permite el movimiento del menu -->
 </body>
 <main> <!--Funcion obligatoria al utilizar header-->
     <head>
