--- a/1. Menor-mayor/menor.html
+++ b/1. Menor-mayor/menor.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
-    <link rel="StyleSheet" type="text/css" href="/lok html/1. Menor-mayor/menor.css"> <!--Documento Css para maquillaje-->
-    <script type="text/javaScript" src="/lok html/1. Menor-mayor/menor.js"></script> <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="menor.css"> <!--Documento Css para maquillaje-->
+    <script type="text/javaScript" src="menor.js"></script> <!--Documento de js-->
     <title> El ejercicio </title>  <!--Titulo de pagina -->
    </head>
    <header>
