--- a/10. Notas del estudiante/notas.html
+++ b/10. Notas del estudiante/notas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/10. Notas del estudiante/notas.css">  <!--Docuemento Css para maquillaje-->
-    <script type="JavaScript" src="/lok html/10. Notas del estudiante/notas.js"></script>  <!--Docuemento de js-->
+    <link rel="StyleSheet" type="text/css" href="notas.css">  <!--Docuemento Css para maquillaje-->
+    <script type="JavaScript" src="notas.js"></script>  <!--Docuemento de js-->
     <title> Notas del estudiante </title>  <!--Titulo de pagina-->
    </head>
   
