--- a/12. Binarios/binario.html
+++ b/12. Binarios/binario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/12. Binarios/binarios.css"> <!--Documento Css para maquillaje-->
-    <script type="JavaScript" src="/lok html/12. Binarios/binario.js"></script> <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="binarios.css"> <!--Documento Css para maquillaje-->
+    <script type="JavaScript" src="binario.js"></script> <!--Documento de js-->
     <title> Binario </title>  <!--Titulo de pagina-->
    </head>
  <header>
