--- a/13. concensado de notas/not.html
+++ b/13. concensado de notas/not.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/13. concensado de notas/not.css"> <!--Documento Css para maquillaje-->
-    <script type="JavaScript" src="/lok html/13. concensado de notas/not.js"></script> <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="not.css"> <!--Documento Css para maquillaje-->
+    <script type="JavaScript" src="not.js"></script> <!--Documento de js-->
     <title> Notas de esudiantes </title> <!--Titulo de pagina-->
    </head>
   <header>
