--- a/4.Hamburgusa/Hamburguesa.html
+++ b/4.Hamburgusa/Hamburguesa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/4.Hamburgusa/Ham.css">  <!--Documento Css para maquillaje-->
-    <script type="JavaScript" src="/lok html/4.Hamburgusa/Ham .js"></script>  <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="Ham.css">  <!--Documento Css para maquillaje-->
+    <script type="JavaScript" src="Ham .js"></script>  <!--Documento de js-->
     <title> Hamburguesas </title>  <!--Titulo de pagina-->
   </head>
 
