--- a/6. Digitos naturales/digitos.html
+++ b/6. Digitos naturales/digitos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/6. Digitos naturales/dig.css"> <!--Docuemento Css para maquillaje-->
-    <script type="text/JavaScript" src="/lok html/6. Digitos naturales/dig.js"></script>  <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="dig.css"> <!--Docuemento Css para maquillaje-->
+    <script type="text/JavaScript" src="dig.js"></script>  <!--Documento de js-->
     <title> Digitos naturales </title>  <!--Titulo de pagina-->
   </head>
 
