--- a/7. 4 digitos/digitosde4.html
+++ b/7. 4 digitos/digitosde4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
-       <link rel="StyleSheet" type="text/css" href="/lok html/7. 4 digitos/dig4.css"> <!--Docuemento Css para maquillaje-->
-       <script type="text/JavaScript" src="/lok html/7. 4 digitos/dig4.js"></script>  <!--Documento de js-->
+       <link rel="StyleSheet" type="text/css" href="dig4.css"> <!--Docuemento Css para maquillaje-->
+       <script type="text/JavaScript" src="dig4.js"></script>  <!--Documento de js-->
        <title> Cuatro numeros </title>  <!--Titulo de pagina-->
     </head>
 
