--- a/8. Conversion de Km,Dc,D,Cm/conver.html
+++ b/8. Conversion de Km,Dc,D,Cm/conver.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/8. Conversion de Km,Dc,D,Cm/conver.css"> <!--Docuemento Css para maquillaje-->
-    <script type="text/JavaScript" src="/lok html/8. Conversion de Km,Dc,D,Cm/conver.js"></script>  <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="conver.css"> <!--Docuemento Css para maquillaje-->
+    <script type="text/JavaScript" src="conver.js"></script>  <!--Documento de js-->
     <title> Convertir </title>  <!--Titulo de pagina-->
    </head>
 
