--- a/Calculadora/calculadora.html
+++ b/Calculadora/calculadora.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
     <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/Calculadora/CSS/lak.css"> <!--Documento Css para maquillaje-->
+    <link rel="StyleSheet" type="text/css" href="CSS/lak.css"> <!--Documento Css para maquillaje-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
-    <script type="text/javaScript" src="/lok html/Calculadora/JAVAS/Resta.js"></script> <!--Java para resta-->
-    <script type="text/javaScript" src="/lok html/Calculadora/JAVAS/Suma.js"></script>  <!--Java para suma-->
-    <script type="text/javaScript" src="/lok html/Calculadora/JAVAS/multiplicacion.js"></script>  <!--Java para multiplicacion-->
-    <script type="text/javaScript" src="/lok html/Calculadora/JAVAS/division.js"></script> <!--Java para Division-->
-    <script type="text/javaScript" src="/lok html/Calculadora/JAVAS/modulo.js"></script> <!--Java para Modulo-->
+    <script type="text/javaScript" src="JAVAS/Resta.js"></script> <!--Java para resta-->
+    <script type="text/javaScript" src="JAVAS/Suma.js"></script>  <!--Java para suma-->
+    <script type="text/javaScript" src="JAVAS/multiplicacion.js"></script>  <!--Java para multiplicacion-->
+    <script type="text/javaScript" src="JAVAS/division.js"></script> <!--Java para Division-->
+    <script type="text/javaScript" src="JAVAS/modulo.js"></script> <!--Java para Modulo-->
     <title> CALCULADORA </title>
     </head>
   <header>
