--- a/11. Tablas de multiplicar/tabla.html
+++ b/11. Tablas de multiplicar/tabla.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/11. Tablas de multiplicar/tabla.css"> <!--Docuemento Css para maquillaje-->
-    <script type="text/JavaScript" src="/lok html/11. Tablas de multiplicar/tabla.js"></script>  <!--Docuemento de js-->
+    <link rel="StyleSheet" type="text/css" href="tabla.css"> <!--Docuemento Css para maquillaje-->
+    <script type="text/JavaScript" src="tabla.js"></script>  <!--Docuemento de js-->
     <title> Tablas de multiplicar </title>  <!--Titulo de pagina-->
 
     <header>
