--- a/2.Ecuaciones/ecuaciones.html
+++ b/2.Ecuaciones/ecuaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
-        <link rel="StyleSheet" type="text/css" href="/lok html/2.Ecuaciones/ecuaciones.css"> <!--Docuemento Css para maquillaje-->
-        <script type="text/JavaScript" src="/lok html/2.Ecuaciones/java/1ecuaciones.js"></script> <!--Docuemento de js-->
+        <link rel="StyleSheet" type="text/css" href="ecuaciones.css"> <!--Docuemento Css para maquillaje-->
+        <script type="text/JavaScript" src="java/1ecuaciones.js"></script> <!--Docuemento de js-->
         <title> Diferentes ecuaciones </title><!--Titulo de pagina -->
     </head>
 <header>
