--- a/5.menor-intermedio/intermedio.html
+++ b/5.menor-intermedio/intermedio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <link rel="StyleSheet" type="text/css" href="/lok html/5.menor-intermedio/inter.css"> <!--Docuemento Css para maquillaje-->
-    <script type="text/JavaScript" src="/lok html/5.menor-intermedio/inter.js"></script>  <!--Documento de js-->
+    <link rel="StyleSheet" type="text/css" href="inter.css"> <!--Docuemento Css para maquillaje-->
+    <script type="text/JavaScript" src="inter.js"></script>  <!--Documento de js-->
     <title> Menor/intermedio/mayor</title>  <!--Titulo de pagina-->
   </head>
 
