--- a/9. Facturar/factu.html
+++ b/9. Facturar/factu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head> 
-        <link rel="StyleSheet" type="text/css" href="/lok html/9. Facturar/factu.css"> <!--Docuemento Css para maquillaje-->
-        <script type="text/JavaScript" src="/lok html/9. Facturar/factu.js"></script>  <!--Documento de js-->
+        <link rel="StyleSheet" type="text/css" href="factu.css"> <!--Docuemento Css para maquillaje-->
+        <script type="text/JavaScript" src="factu.js"></script>  <!--Documento de js-->
         <title> FACTURA</title>  <!--Titulo de pagina-->
     </head>
     <header>
