--- a/Tabla.html
+++ b/Tabla.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tablas de multiplicar</title>
     <link rel="StyleSheet" type="text/css" href="CSS/tabla.css"> <!--Docuemento Css para maquillaje-->
-    <script type="text/JavaScript" src="Java/tabla.js"></script>  <!--Docuemento de js-->
-    <title> Tablas de multiplicar </title>  <!--Titulo de pagina-->
-  </head>
-    <header>
-        <!--Espacio de relleno en decoracion-->
-    </header>
+    <script type="text/JavaScript" src="Java/tabla.js"></script>
+</head>
 
-    <body>  <!--CUERPO-->
-      <div id="tabla"> <!--Clase para mover toda la seccion-->
-        <form name="tablon">
-           <h1> Digite el numero de la tabla que quiere realizar </h1>
-           <input id="los" type="text" name="n1" size="15"> <!--Ingresa numero por teclado-->
-           <button id="lik" type="button" onclick="label()">Resultado</button>  <!--BOTON-->
-        </form>
-      </div> 
-    </body>  <!--FINAL DE CUERPO-->
-</html>  <!--Final HTML-->
+<header>
+
+</header>
+<main>
+<body>
+  
+    <h1>Ingrese el numero que desea multiplicar</h1>
+      <Form name="Form1">
+        <input id="los" type="text" name="a1" size="10">
+        <button id="lik" type="button" onclick="tablas()">Resultado</button>
+
+        
+      </form>
+</body>
+</main>
+</html>
