--- a/Concensado.html
+++ b/Concensado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <head>
     <link rel="StyleSheet" type="text/css" href="CSS/Concensado.css"> <!--Documento Css para maquillaje-->
-    <script type="JavaScript" src="Java/Concensado.js"></script> <!--Documento de js-->
+    <script type="text/JavaScript" src="Java/Concensado.js"></script> <!--Documento de js-->
     <title> Notas de esudiantes </title> <!--Titulo de pagina-->
    </head>
   <header>
